--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>  hello github-jenkin node-todo-app</h1>
+        <h1>  hello jenkin node-todo-app</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
